[UI] fixed crumbs on small screens

--- a/src/components/Breadcrumbs/Breadcrumbs.module.scss
+++ b/src/components/Breadcrumbs/Breadcrumbs.module.scss
@@ -11,9 +11,16 @@
   align-items: center;
 }
 
-.homeImg{
-  width: 100%;
-  height: 100%;
+.crumbsContainer {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.homeImg {
   display: block;
 }
 
@@ -23,6 +30,13 @@
 
 .lastCrumb {
   color: $icons;
+  max-width: 60%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
+  @include onTablet {
+    max-width: 100%;
+  }
 }
 
 .crumb {
